// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTabPane customize 1`] = `
<div>
  <div
    class="tab-pane active fade show bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CTabPane component 1`] = `
<div>
  <div
    class="tab-pane fade"
  >
    Test
  </div>
</div>
`;
